[package]
name = "http_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
# http
http = "1.0.0"
# logging
log = "0.4.20"
# tls
async-tls = "0.13.0"
# error handling
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# json
miniserde = "0.1.40"

[dev-dependencies]
# logging
env_logger = "0.11.5"
